adjusted home page to be better and modified the footer

--- a/src/index.css
+++ b/src/index.css
@@ -63,9 +63,16 @@ section {
   margin-top: 8rem;
 }
 
+
 section > h2,
 section > h5 {
   color: var(--color-light);
+  text-align: center;
+}
+
+section > h1 {
+  color: var(--color-white);
+  margin-bottom: 3rem;
   text-align: center;
 }
 
