--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,3 +1,25 @@
 .footer {
     margin-bottom: 5rem
 }
+
+.header__socials {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 0.8rem;
+    left: 5rem;
+    bottom: 1rem;
+    margin-top:2rem
+}
+
+
+
+.cta {
+    display: flex;
+    justify-content: left;
+    gap: 1.2rem;
+    margin-top: 2.5rem;
+  }
+  
+  
