--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,68 +1,43 @@
-.experience__container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
+.company_section {
+    padding: 0.5rem;
+    margin-bottom: 1.5rem;
 }
 
-.experience__container > div {
+.experience__item {
     background: var(--color-bg-variant);
-    padding: 2.4rem 5rem;
+    padding: 1.3rem;
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
 }
 
-.experience__container > div:hover {
-    background: transparent;
-    border-color: var(--color-primary-variant);
-    cursor: default;
+
+.experience__item-image {
+    border-radius: 1.5rem;
+    overflow: hidden;
+    height: 40%;
 }
 
-.experience__container > div h3 {
-    text-align: center;
-    margin-bottom: 2rem;
-    color: var(--color-primary);
+.experience__item h3 {
+    margin: 1.2rem 0 2rem;
 }
 
-.experience__content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    row-gap: 2rem;
-}
-
-.experience__details {
+.experience__item-cta {
     display: flex;
     gap: 1rem;
-}
-
-.experience__details-icon {
-    margin-top: 6px;
-    color: var(--color-primary);
+    margin-bottom: 1rem; 
 }
 
 @media screen and (max-width: 1024px){
     .experience__container {
-        grid-template-columns: 1fr;
-    }
-
-    .experience__container > div {
-        width: 80%;
-        margin: 0 auto;
-        padding: 2rem;
-    }
-
-    .experience__content p {
-        padding: 1rem;
+        grid-template-columns: 1fr 1fr;
+        gap: 1.2rem;
     }
 }
   
 @media screen and (max-width: 600px){
     .experience__container {
+        grid-template-columns: 1fr;
         gap: 1rem;
-    }
-
-    .experience__container > div {
-        width: 100%;
-        padding: 2rem 1rem;
     }
 }
