--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -37,13 +37,9 @@
     padding: 2rem;
     text-align: center;
     transition: var(--transition);
+    cursor: pointer;
 }
 
-.about__card:hover {
-    background: transparent;
-    border-color: var(--color-primary-variant);
-    cursor: default;
-}
 
 .about__icon {
     color: var(--color-primary);
@@ -53,6 +49,7 @@
 
 .about__card h5 {
     font-size: 1rem;
+    color: var(--color-white);
 }
 
 .about__card small {
