--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -8,7 +8,7 @@
     width: 100%;
     aspect-ratio: 1/1;
     border-radius: 2rem;
-    background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
+    background: linear-gradient(45deg, #1f1f38, var(--color-primary), #1f1f38);
     display: grid;
     place-items: center;
 }
