--- a/src/index.css
+++ b/src/index.css
@@ -10,21 +10,6 @@
   text-decoration: none;
 }
 
-:root {
-  --color-bg: #1f1f38;
-  --color-bg-variant: #2c2c6c;
-  --color-primary: #4db5ff;
-  --color-primary-variant: rgba(77, 181, 255, 0.4);
-  --color-white: #fff;
-  --color-light: rgba(255, 255, 255, 0.6);
-
-  --transition: all 400ms ease;
-
-  --container-width-lg: 75%;
-  --container-width-md: 86%;
-  --container-width-sm: 90%;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -38,7 +23,7 @@ body {
   background-color: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
-  background-image: url(../src/assets/bg-texture.png);
+  background-image: var(--body-bg);
 }
 
 .container {
@@ -60,7 +45,7 @@ h1 {
 }
 
 section {
-  margin-top: 8rem;
+  margin-top: 4rem;
 }
 
 
