--- a/public/css/light.css
+++ b/public/css/light.css
@@ -1,7 +1,7 @@
 :root {
-    --color-bg: #f4f4f9;
-    --color-bg-variant: #fdeaf1;
-    --color-primary: #e8006f;
+    --color-bg: #efe6d5;
+    --color-bg-variant: #9dbeb7;
+    --color-primary: #e73213;
     --color-primary-variant: rgba(77, 181, 255, 0.4);
     --color-white: #000;
     --color-light: rgba(0, 0, 0, 0.6);
